--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://AleksandraMisic762.github.io/ReactMastermind"
+  "homepage": "http://AleksandraMisic762.github.io/ReactMastermind",
   "name": "react-domaci",
   "version": "0.1.0",
   "private": true,
